--- a/rpcd/playbooks/roles/rpc_maas/tasks/package_install_redhat.yml
+++ b/rpcd/playbooks/roles/rpc_maas/tasks/package_install_redhat.yml
@@ -13,21 +13,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-galaxy_info:
-  author: rcbops
-  description: Installation and setup of Rackspace MaaS
-  company: Rackspace
-  license: Apache2
-  min_ansible_version: 1.6.6
-  platforms:
-    - name: Ubuntu
-      versions:
-        - trusty
-  categories:
-    - cloud
-    - monitoring
-    - MaaS
-    - development
-    - openstack
-dependencies:
-  - pip_install
+
+- name: Ensure container packages are installed
+  yum:
+    name: "{{ item }}"
+    state: present
+    update_cache: yes
+  with_items: maas_rpm_packages
+
+- name: Install pip packages
+  pip:
+    name: "{{ item }}"
+    state: present
+  with_flattened:
+    - maas_pip_packages
+    - maas_pip_dependencies
