--- a/rpcd/playbooks/roles/rpc_maas/tasks/repo_setup_redhat.yml
+++ b/rpcd/playbooks/roles/rpc_maas/tasks/repo_setup_redhat.yml
@@ -13,21 +13,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-galaxy_info:
-  author: rcbops
-  description: Installation and setup of Rackspace MaaS
-  company: Rackspace
-  license: Apache2
-  min_ansible_version: 1.6.6
-  platforms:
-    - name: Ubuntu
-      versions:
-        - trusty
-  categories:
-    - cloud
-    - monitoring
-    - MaaS
-    - development
-    - openstack
-dependencies:
-  - pip_install
+- name: Add MaaS rpm keys
+  rpm_key:
+    key: "{{ item.url }}"
+    state: "{{ item.state }}"
+  with_items: maas_rpm_keys
+  when: "maas_rpm_keys is defined"
+
+- name: Add Container repos
+  copy:
+    src: rackspace-cloud-monitoring.repo
+    dest: /etc/yum.repos.d/rackspace-cloud-monitoring.repo
+  register: add_repos
+  until: add_repos|success
+  retries: 3
